@@ -707,6 +707,7 @@ Object getCompiler() {
 		SA("append!"),
 		SA("pass3/find-free"),
 		SA("pass3/find-sets"),
+		SA("pass4/fixup-labels"),
 		SA("make-code-builder"),
 		SA("code-builder-put1!"),
 		SA("code-builder-put2!"),
@@ -715,7 +716,6 @@ Object getCompiler() {
 		SA("code-builder-put5!"),
 		SA("code-builder-append!"),
 		SA("code-builder-emit"),
-		SA("pass4/fixup-labels"),
 		SA("top level :$:*free-vars-decl*"),
 		SA("command-line"),
 		SA("top level :$:*command-line-args*"),
@@ -15792,7 +15792,7 @@ Object list171 = arrayToList(array171, 2);
 
 static Object array172[] = {
 list171,
- symbols[702],
+ symbols[694],
  symbols[168]};
 Object list172 = arrayToList(array172, 3);
 
@@ -16643,7 +16643,7 @@ Object list295 = arrayToList(array295, 2);
 
 static Object array296[] = {
 list295,
- symbols[701],
+ symbols[702],
  symbols[1058]};
 Object list296 = arrayToList(array296, 3);
 
@@ -16665,7 +16665,7 @@ Object list299 = arrayToList(array299, 2);
 
 static Object array300[] = {
 list299,
- symbols[700],
+ symbols[701],
  symbols[1064],
  symbols[1065]};
 Object list300 = arrayToList(array300, 4);
@@ -16677,7 +16677,7 @@ Object list301 = arrayToList(array301, 2);
 
 static Object array302[] = {
 list301,
- symbols[699],
+ symbols[700],
  symbols[1058],
  symbols[142],
  symbols[250],
@@ -16693,7 +16693,7 @@ Object list303 = arrayToList(array303, 2);
 
 static Object array304[] = {
 list303,
- symbols[698],
+ symbols[699],
  symbols[1058],
  symbols[142],
  symbols[250],
@@ -16708,7 +16708,7 @@ Object list305 = arrayToList(array305, 2);
 
 static Object array306[] = {
 list305,
- symbols[697],
+ symbols[698],
  symbols[1058],
  symbols[142],
  symbols[250],
@@ -16722,7 +16722,7 @@ Object list307 = arrayToList(array307, 2);
 
 static Object array308[] = {
 list307,
- symbols[696],
+ symbols[697],
  symbols[1058],
  symbols[142],
  symbols[250]};
@@ -16735,7 +16735,7 @@ Object list309 = arrayToList(array309, 2);
 
 static Object array310[] = {
 list309,
- symbols[695],
+ symbols[696],
  symbols[1058],
  symbols[3]};
 Object list310 = arrayToList(array310, 4);
@@ -16747,7 +16747,7 @@ Object list311 = arrayToList(array311, 2);
 
 static Object array312[] = {
 list311,
- symbols[694]};
+ symbols[695]};
 Object list312 = arrayToList(array312, 2);
 
 static Object array313[] = {
@@ -89070,7 +89070,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(13),
  MI(94),
@@ -89192,7 +89192,7 @@ MIS(58),
  MIS(58),
  MIS(58),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(48),
  MI(24),
@@ -89584,7 +89584,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(94),
@@ -89689,7 +89689,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(94),
@@ -89797,7 +89797,7 @@ MIS(58),
  MI(55),
  MIS(2),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(74),
@@ -89912,7 +89912,7 @@ MIS(58),
  symbols[1088],
  MIS(32),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(31),
@@ -89965,10 +89965,10 @@ MIS(58),
  symbols[1092],
  MIS(32),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(235),
@@ -90219,7 +90219,7 @@ MIS(58),
  MI(65),
  MIS(2),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(13),
  MI(71),
@@ -90455,7 +90455,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(193),
@@ -90663,7 +90663,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(361),
@@ -91242,7 +91242,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(13),
  MI(24),
@@ -91274,10 +91274,10 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(2013),
@@ -93397,13 +93397,13 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
- MIS(2),
- MIS(48),
  MI(138),
  MIS(2),
  MIS(48),
- MI(136),
+ MI(139),
+ MIS(2),
+ MIS(48),
+ MI(137),
  MIS(2),
  MIS(13),
  MI(396),
@@ -93814,7 +93814,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(13),
  MI(93),
@@ -93917,7 +93917,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(13),
  MI(69),
@@ -94112,10 +94112,10 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(48),
- MI(140),
+ MI(141),
  MIS(2),
  MIS(48),
  MI(130),
@@ -94127,10 +94127,10 @@ MIS(58),
  MI(134),
  MIS(2),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(48),
- MI(138),
+ MI(139),
  MIS(2),
  MIS(48),
  MI(67),
@@ -95681,13 +95681,13 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(137),
- MIS(2),
- MIS(48),
  MI(138),
  MIS(2),
  MIS(48),
- MI(136),
+ MI(139),
+ MIS(2),
+ MIS(48),
+ MI(137),
  MIS(2),
  MIS(13),
  MI(257),
@@ -95975,22 +95975,22 @@ MIS(58),
  MI(134),
  MIS(2),
  MIS(48),
- MI(135),
- MIS(2),
- MIS(48),
- MI(140),
- MIS(2),
- MIS(48),
- MI(67),
- MIS(2),
- MIS(48),
- MI(137),
+ MI(136),
  MIS(2),
  MIS(48),
  MI(141),
  MIS(2),
  MIS(48),
+ MI(67),
+ MIS(2),
+ MIS(48),
  MI(138),
+ MIS(2),
+ MIS(48),
+ MI(142),
+ MIS(2),
+ MIS(48),
+ MI(139),
  MIS(2),
  MIS(13),
  MI(841),
@@ -96873,13 +96873,13 @@ MIS(58),
  MI(134),
  MIS(2),
  MIS(48),
- MI(136),
- MIS(2),
- MIS(48),
  MI(137),
  MIS(2),
  MIS(48),
  MI(138),
+ MIS(2),
+ MIS(48),
+ MI(139),
  MIS(2),
  MIS(48),
  MI(67),
@@ -97789,10 +97789,10 @@ MIS(58),
  MI(134),
  MIS(2),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(48),
  MI(67),
@@ -98764,10 +98764,10 @@ MIS(58),
  MI(134),
  MIS(2),
  MIS(48),
- MI(136),
+ MI(137),
  MIS(2),
  MIS(48),
- MI(137),
+ MI(138),
  MIS(2),
  MIS(48),
  MI(67),
@@ -100192,7 +100192,7 @@ MIS(58),
  MI(65),
  MIS(2),
  MIS(48),
- MI(140),
+ MI(141),
  MIS(2),
  MIS(13),
  MI(238),
@@ -100444,7 +100444,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(138),
+ MI(139),
  MIS(2),
  MIS(13),
  MI(34),
@@ -100781,13 +100781,13 @@ MIS(58),
  symbols[1094],
  MIS(32),
  MIS(48),
- MI(135),
+ MI(136),
  MIS(2),
  MIS(48),
  MI(63),
  MIS(2),
  MIS(48),
- MI(142),
+ MI(143),
  MIS(2),
  MIS(13),
  MI(75),
@@ -100875,7 +100875,7 @@ MIS(58),
  MI(130),
  MIS(2),
  MIS(48),
- MI(143),
+ MI(135),
  MIS(2),
  MIS(13),
  MI(35),
@@ -101076,7 +101076,7 @@ MIS(58),
  MIS(32),
  MIS(32),
  MIS(48),
- MI(143),
+ MI(135),
  MIS(2),
  MIS(48),
  MI(125),
