@@ -1,3 +1,7 @@
+2008-07-01  higepon  <higepon@users.sourceforge.jp>
+
+        * compiler.scm (pass4/fixup-labels): Rewrote in C++ for perfomance.
+
 2008-06-30  higepon  <higepon@users.sourceforge.jp>
 
         * VM.cpp (run): Improved cprocedure call speed.
